* fix the cross line drawing bug;

--- a/draggablegrid-example/src/main/res/layout/activity_ad_main.xml
+++ b/draggablegrid-example/src/main/res/layout/activity_ad_main.xml
@@ -20,9 +20,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:listSelector="@android:color/transparent"
-            android:numColumns="3"
+            android:numColumns="4"
             halohoop:adbar_height="30dp"
-            halohoop:adbar_rawposition="3"
-            halohoop:crossline_color="#8e8e8e"></net.halohoop.draggableadgridview.views.DraggableAdGridView>
+            halohoop:adbar_rawposition="4"
+            halohoop:crossline_color="#E8E8E8"></net.halohoop.draggableadgridview.views.DraggableAdGridView>
     </FrameLayout>
 </LinearLayout>
